--- a/Day-9(Project)/frontend/admin.html
+++ b/Day-9(Project)/frontend/admin.html
@@ -79,7 +79,7 @@
               <a class="nav-link" href="admin.html">All Products<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="addproduct.html">Add Product</a>
+              <a class="nav-link" href="addpro.html">Add Product</a>
             </li>
            
            
